# variant

./: CMakeLists.txt  variantConfig.cmake.in
